# game_engine

./: README.md  pyproject.toml
src/plattest/: __main__.py  config.py  main.py
src/plattest/entities/: box_2d_entity.py  circle_entity.py  entity.py
src/plattest/physics/: math_help.py  physics_system.py
src/plattest/physics/forces/: __init__.py  force.py  force_register.py  force_registry.py  gravity.py
src/plattest/physics/primitives/: __init__.py  particle.py  rigidbody.py
src/plattest/physics/rigid_body/: collision_data.py  collision_manifold.py  intersection_detection.py  line.py  rigidbody.py
src/plattest/physics/shapes/: circle.py  rect.py  shape.py
src/plattest/rendering/: camera.py
tests/: __main__.py  circle_and_circle.py  rect_and_circle.py  rect_and_rect.py
