[project]
name = "PlatTest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anatoliy Dudar", email = "gigsollt@gmail.com"},
]
dependencies = ["pygame>=2.6.1"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
